Trace: Apply error-prone patch